fix details being too low when zoomed in

--- a/client/src/components/Flights/styles.module.css
+++ b/client/src/components/Flights/styles.module.css
@@ -116,9 +116,9 @@ p{
     display: flex;
     flex-direction: column;
     position: fixed;
+    top: 20vh;
     left: 0;
     right: 0;
-    top: 325px;
     margin-left: auto;
     margin-right: auto;
     width: 60vw;
